# bevy_obj

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
assets/: cube.mtl
example/: cube.rs  render.rs  render_obj.rs  viewer.rs
examples/: viewer.rs
src/: lib.rs  loader.rs  mesh.rs  scene.rs  util.rs
src/loader/: mesh.rs  mod.rs  scene.rs
