[package]
name = "bevy_obj"
version = "0.15.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/bevy_obj"
description = "Wavefront OBJ mesh asset loader plugin for the Bevy engine"
keywords = ["bevy", "obj"]
authors = ["Csányi István <icsanyi96@gmail.com>"]
exclude = ["/assets"]

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.0"
tobj = "4.0.0"

[dependencies.bevy]
version = "0.15.0-rc"
default-features = false
features = ["bevy_asset", "bevy_render"]

[dev-dependencies.bevy]
version = "0.15.0-rc"
default-features = true

[features]
default = ["mesh", "scene"]
mesh = []
scene = ["tobj/async", "bevy/bevy_scene", "bevy/bevy_pbr"]
log = ["tobj/log"]

[[example]]
name = "cube"
path = "example/cube.rs"

[[example]]
name = "viewer"
path = "example/viewer.rs"
