[package]
name = "bevy_obj"
version = "0.18.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/bevy_obj"
description = "Wavefront OBJ mesh asset loader plugin for the Bevy engine"
keywords = ["bevy", "obj"]
exclude = ["/assets", "/examples"]

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "2.0.0"
tobj = "4.0.3"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["bevy_asset", "bevy_mesh"]

[dev-dependencies.bevy]
version = "0.18.0"
default-features = true

[features]
default = ["mesh", "scene"]
# Support for loading OBJ file as a singular mesh
mesh = []
# Support for loading OBJ file as a scene with MTL materials
scene = ["tobj/futures", "bevy/bevy_scene", "bevy/bevy_pbr"]
# Enable logging of the OBJ parser crate
log = ["tobj/log"]
