[package]
name = "bevy_obj"
version = "0.18.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/bevy_obj"
description = "Wavefront OBJ mesh asset loader plugin for the Bevy engine"
keywords = ["bevy", "obj"]
exclude = ["/assets", "/examples"]

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "2.0.0"
wobj.path = "../wobj"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["bevy_asset", "bevy_mesh"]

[dev-dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    "default_app",
    "3d_bevy_render",
    "scene",
    "audio",
    "picking",
    "std",
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "sysinfo_plugin",
    "bmp",
    "dds",
    "exr",
    "ff",
    "gif",
    "hdr",
    "ktx2",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
]

[features]
default = ["mesh", "scene"]
# Support for loading OBJ file as a singular mesh
mesh = []
# Support for loading OBJ file as a scene with MTL materials
scene = ["bevy/bevy_scene", "bevy/bevy_pbr"]
